# pubmed-evidence-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  SOLUTION.md  dagster.yaml  docker-compose.yml  init_db.py  pyproject.toml  run_local.py  seed_partitions.py  workspace.docker.yaml  workspace.yaml
.github/workflows/: ci.yml
src/analytics/: __init__.py  embeddings.py  funding.py  geography.py  knowledge_graph.py  mesh_cooccurrence.py  population_profile.py  publication_trends.py  study_design.py  treatment_matrix.py
src/dagster_pipeline/: __init__.py  checks.py  checks_extra.py  checks_run_extra.py  definitions.py  partitions.py  resources.py
src/dagster_pipeline/assets/: __init__.py  analytics.py  extraction.py  ingestion.py
src/db/: __init__.py  models.py  queries.py  session.py
src/ingest/: __init__.py  downloader.py  filter.py  parser.py
src/llm/: __init__.py  client.py  extractor.py
src/llm/prompts/: treatment_outcome.md
src/models/: __init__.py  analytics.py  article.py
src/web/: app.py
tests/: conftest.py  test_analytics.py  test_downloader.py  test_extractor.py  test_filter.py  test_parser.py
