[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pubmed-endometriosis-pipeline"
version = "0.1.0"
description = "PubMed treatment evidence pipeline for endometriosis using Dagster + Gemini"
requires-python = ">=3.11"
dependencies = [
    # Orchestration
    "dagster>=1.7.0",
    "dagster-webserver>=1.7.0",
    "dagster-postgres>=0.23.0",

    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",

    # Data validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",

    # LLM
    "litellm>=1.35.0",

    # HTTP / FTP
    "httpx>=0.27.0",
    "tenacity>=8.2.0",

    # XML parsing
    "lxml>=5.2.0",

    # Analytics
    "pandas>=2.2.0",
    "networkx>=3.3",
    "numpy>=1.26.0",

    # Embeddings clustering
    "umap-learn>=0.5.6",
    "hdbscan>=0.8.33",
    "scikit-learn>=1.4.0",

    # Visualization (dashboard)
    "streamlit>=1.33.0",
    "plotly>=5.20.0",
    "pyvis>=0.3.2",

    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "types-lxml>=2024.4.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
